--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-helmet": "^5.2.1",
     "react-input-range": "^1.3.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
